chapter 10 code